# peering.rotko.net

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md  compose.yaml  run.sh  tailwind.config.js  tailwind.sh
.github/ISSUE_TEMPLATE/: bug.md  feature.md  maintainence.md  performance.md
.github/workflows/: deploy.yaml
app/: Cargo.toml  Dioxus.toml
app/resources/style/: main.css  tailwind.css
app/src/: main.rs
app/src/data/: auth.rs  auth_data_source.rs  auth_repository.rs  credentials_data_source.rs  credentials_repository.rs  mod.rs  profile.rs  profile_data_source.rs  profile_repository.rs
app/src/domain/: oauth.rs
app/src/ui/: mod.rs
app/src/ui/app/: app.rs
app/src/ui/auth/: login.rs
app/src/ui/home/: home.rs
assets/: tailwind.css
assets/styling/: appbar.css
src/: main.rs
src/components/: hero.rs  navbar.rs
src/ui/app/: app.rs
src/ui/auth/: login.rs
src/ui/common/component/: app_bar.rs  echo.rs  mod.rs
src/ui/home/: home.rs
src/views/: login.rs  mod.rs
ui/: Cargo.toml
ui/src/: lib.rs
ui/src/design/: mod.rs
ui/src/design/component/: app_bar.rs  button.rs  grid.rs  icon.rs  image.rs  list.rs  menu.rs  mod.rs  text.rs
ui/src/design/reference/: icon.rs  image.rs  mod.rs
ui/src/foundation/: column.rs  mod.rs  row.rs
