[workspace]
members = ["app", "ui"]
resolver = "2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.dependencies]
rand_core = "0.9.1"  # Ensure this version depends on getrandom 0.3
getrandom = "0.3"
