[package]
name = "peering-rotko-net"
version = "0.1.0"
authors = ["hitchhooker <tommi@niemi.lol>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = { path = "../ui" }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
manganis = "0.6.2"
console = "0.15.10"


[features]
default = []
web = ["dioxus/web"]
#desktop = ["dioxus/desktop"]
#mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
