[package]
name = "peering-rotko-net"
version = "0.1.0"
authors = ["hitchhooker <tommi@niemi.lol>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = { path = "../ui" }
dioxus = { version = "0.6.3", features = ["router", "web"] }
manganis = "0.6.2"
console = "0.15.10"
sha2 = "0.10"
base64 = "0.22.1"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
url = "2.5.4"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
# Careful if using rand, and rand_chacha. Later versions of it create dependency conflict with vesion 0.6 of Dioxus
#rand = "0.6"
#rand_chacha = "0.3"
# The crate wasm-bindgen is panicking in platform 'web'
#wasm-bindgen = "0.2"
dioxus-material = "0.2.1"
dioxus-charts = "0.3"

[features]
default = []
web = ["dioxus/web"]
#desktop = ["dioxus/desktop"]
#mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
