[package]
name = "ui"
version = "0.1.0"
edition = "2021"


[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
manganis = "0.6.2"
console = "0.15.10"
web-sys = "0.3.77"

[features]
default = []
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"